fixing buggy re-centering on collapse

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,7 +32,7 @@ h1.logo {
   padding-bottom: 2px;
   top: -10px;
   left: 50%;
-  margin-left: -50px; /* half the width */
+  margin-left: -55px; /* half the width */
   background-color: black;
   border: 1px solid black;
   color: white;
